Improve loan consolidation page for LLM SEO

--- a/finance/loan-consolidation-israel/index.html
+++ b/finance/loan-consolidation-israel/index.html
@@ -2,8 +2,8 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>איחוד הלוואות בישראל – מדריך כללי | SmartInfo Israel</title>
-  <meta name="description" content="מהו איחוד הלוואות בישראל, למי זה עשוי להתאים, יתרונות וחסרונות כלליים ושאלות נפוצות – מידע כללי בלבד.">
+  <title>איחוד הלוואות בישראל - מה זה, למי זה מתאים ומה חשוב לבדוק | SmartInfo Israel</title>
+  <meta name="description" content="מדריך כללי על איחוד הלוואות בישראל: מה זה איחוד הלוואות, למי זה עשוי להתאים, יתרונות וחסרונות, טבלת השוואה ושאלות נפוצות. מידע כללי בלבד.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <link rel="stylesheet" href="/styles.css">
@@ -11,103 +11,173 @@
 <body>
 <header>
   <div class="container">
-    <h1>איחוד הלוואות בישראל – מדריך כללי</h1>
+    <h1>איחוד הלוואות בישראל - מדריך כללי</h1>
     <nav>
       <a href="/">דף הבית</a>
       <a href="/finance/business-loans-israel/">הלוואות לעסקים</a>
       <a href="/finance/personal-loans-israel/">הלוואות פרטיות</a>
       <a href="/finance/loan-consolidation-israel/">איחוד הלוואות</a>
+      <a href="/about.html">אודות</a>
+      <a href="/legal-disclaimer.html">הצהרה משפטית</a>
     </nav>
   </div>
 </header>
 
 <main class="container">
+
   <section>
     <p class="notice">
-      המידע בעמוד זה הוא כללי בלבד, אינו ייעוץ פיננסי או משפטי ואינו שיווק אשראי.
-      תנאי הלוואות בפועל נקבעים על ידי גופים מפוקחים ובהתאם לנתונים האישיים של כל אדם.
+      המידע בעמוד זה הוא כללי בלבד, אינו ייעוץ פיננסי/משפטי ואינו שיווק אשראי.
+      תנאי הלוואה בפועל נקבעים על-ידי גופים מפוקחים ובהתאם לנתונים האישיים של כל לווה.
     </p>
   </section>
 
+  <!-- LLM-friendly direct answer block -->
   <section>
-    <h2>מה זה איחוד הלוואות?</h2>
+    <h2>תשובה קצרה ומהירה</h2>
     <p>
-      איחוד הלוואות הוא תהליך שבו מספר הלוואות קיימות מוחלפות בהלוואה אחת חדשה.
-      המטרה יכולה להיות פישוט ניהול התשלומים, שינוי גובה ההחזר החודשי או שינוי תנאי הריבית.
+      <strong>איחוד הלוואות</strong> הוא תהליך שבו מחליפים מספר הלוואות קיימות בהלוואה אחת חדשה.
+      המטרה בדרך כלל היא <strong>לפשט את ההחזרים לתשלום חודשי אחד</strong> ולעיתים <strong>להתאים את גובה ההחזר</strong>
+      (למשל באמצעות שינוי תקופה/ריבית). האם זה משתלם תלוי בעלות הכוללת (ריבית+עמלות) ובמבנה ההחזר.
+    </p>
+    <p>
+      אם יש לך כמה הלוואות במקביל, מומלץ להשוות בין <strong>העלות הכוללת</strong> של ההלוואות הקיימות לבין
+      העלות הכוללת של ההלוואה המאוחדת — ולא להסתכל רק על “כמה יורד ההחזר החודשי”.
     </p>
   </section>
 
   <section>
-    <h2>סוגי גופים שיכולים להציע איחוד הלוואות (באופן כללי)</h2>
+    <h2>מה זה איחוד הלוואות (בהרחבה)</h2>
+    <p>
+      במקום לנהל מספר הלוואות (למשל מהבנק, כרטיס אשראי, או גוף מימון נוסף) — לוקחים הלוואה אחת חדשה,
+      ומשתמשים בה כדי לסגור את ההלוואות הקיימות. בפועל נשארים עם החזר חודשי אחד ותנאים חדשים.
+    </p>
+  </section>
+
+  <section>
+    <h2>למי זה עשוי להתאים?</h2>
+    <ul>
+      <li><strong>מי שמנהל מספר החזרים</strong> ורוצה סדר ופשטות בתזרים החודשי.</li>
+      <li><strong>מי שמתקשה לעמוד בהחזרים</strong> ומחפש פריסה מחדש (חשוב לבדוק עלות כוללת).</li>
+      <li><strong>מי שרוצה לנסות לשפר תנאים</strong> (ריבית/תקופה/מבנה החזר) ביחס להלוואות הקיימות.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>יתרונות וחסרונות (כללי)</h2>
+
+    <h3>יתרונות אפשריים</h3>
+    <ul>
+      <li>החזר חודשי אחד במקום כמה.</li>
+      <li>פשטות בניהול תזרים ומעקב אחר תשלומים.</li>
+      <li>במקרים מסוימים: תנאים טובים יותר לעומת חלק מההלוואות הקיימות.</li>
+    </ul>
+
+    <h3>חסרונות וסיכונים</h3>
+    <ul>
+      <li><strong>פריסה ארוכה יותר</strong> יכולה להוזיל החזר חודשי אך להגדיל את <strong>סך הריבית הכוללת</strong>.</li>
+      <li>עמלות שונות (למשל פירעון מוקדם/פתיחת תיק) עלולות להגדיל עלות.</li>
+      <li>איחוד באמצעות הלוואה כנגד בטוחה (אם רלוונטי) מגדיל סיכון לנכס/חיסכון משועבד.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>טבלת השוואה מהירה: מה כדאי לבדוק לפני שמאחדים</h2>
     <table>
       <thead>
         <tr>
-          <th>סוג גוף</th>
-          <th>דוגמה כללית</th>
-          <th>יתרון אפשרי</th>
-          <th>חיסרון אפשרי</th>
+          <th>מה בודקים?</th>
+          <th>למה זה חשוב?</th>
+          <th>איך בודקים בפועל?</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>בנקים</td>
-          <td>הלוואה חדשה במקום מספר הלוואות קיימות באותו בנק</td>
-          <td>היכרות עם הלקוח והיסטוריית החשבון</td>
-          <td>מותנה במדיניות הבנק ובנתונים האישיים</td>
+          <td>עלות כוללת (ריבית + עמלות)</td>
+          <td>החזר חודשי נמוך לא תמיד אומר “זול יותר”</td>
+          <td>השווה סכום תשלומים כולל בהלוואות קיימות מול המאוחדת</td>
         </tr>
         <tr>
-          <td>גופים חוץ בנקאיים</td>
-          <td>חברות מימון ואשראי מפוקחות</td>
-          <td>גמישות מסוימת במבנה ההחזר</td>
-          <td>לעיתים ריביות גבוהות יותר</td>
+          <td>תקופת ההחזר</td>
+          <td>תקופה ארוכה = יותר ריבית לאורך זמן</td>
+          <td>בדוק את מספר התשלומים והסכום המצטבר</td>
         </tr>
         <tr>
-          <td>הלוואה כנגד ביטחונות</td>
-          <td>משכון נכס, חיסכון או קופת גמל</td>
-          <td>לעיתים ריבית נמוכה יותר</td>
-          <td>סיכון על הנכס/החיסכון המשועבד</td>
+          <td>עמלות פירעון מוקדם</td>
+          <td>סגירת הלוואות קיימות עשויה לייצר עלויות</td>
+          <td>בדוק בהסכמים/באתר הגוף המלווה/במוקד</td>
+        </tr>
+        <tr>
+          <td>ריבית: קבועה/משתנה</td>
+          <td>משתנה יכולה לעלות בהמשך</td>
+          <td>בקש פירוט מסלול + תרחיש שינוי</td>
+        </tr>
+        <tr>
+          <td>יכולת החזר ריאלית</td>
+          <td>המטרה היא יציבות, לא “עוד הלוואה”</td>
+          <td>בנה תקציב חודשי ובדוק מרווח ביטחון</td>
         </tr>
       </tbody>
     </table>
   </section>
 
   <section>
-    <h2>יתרונות וחסרונות כלליים</h2>
-    <h3>יתרונות אפשריים</h3>
+    <h2>מה ההבדל בין איחוד הלוואות למחזור הלוואה?</h2>
     <ul>
-      <li>תשלום חודשי אחד במקום מספר תשלומים.</li>
-      <li>התאמת גובה ההחזר ליכולת הכלכלית (למשל הארכת תקופת ההלוואה).</li>
-      <li>במקרים מסוימים – שיפור תנאי ריבית לעומת ההלוואות הקיימות.</li>
+      <li><strong>איחוד הלוואות:</strong> לוקחים הלוואה אחת חדשה במקום מספר הלוואות.</li>
+      <li><strong>מחזור הלוואה:</strong> מחליפים הלוואה קיימת אחת בהלוואה חדשה בתנאים אחרים (לרוב אותה הלוואה “ממוחזרת”).</li>
     </ul>
+  </section>
 
-    <h3>חסרונות וסיכונים</h3>
+  <!-- Internal linking: strengthen finance cluster -->
+  <section>
+    <h2>קריאה נוספת בתוך האתר</h2>
     <ul>
-      <li>הארכת תקופת ההחזר יכולה להגדיל את סך הריבית הכוללת לאורך זמן.</li>
-      <li>עמלות שונות (פתיחת תיק, פירעון מוקדם ועוד) עלולות להגדיל את העלות הכוללת.</li>
-      <li>הלוואה כנגד נכס מגדילה את הסיכון במקרה של אי עמידה בהחזר.</li>
+      <li>
+        <a href="/finance/personal-loans-israel/">הלוואות פרטיות בישראל - מדריך כללי</a>
+        <span> (רקע על סוגי הלוואות ושיקולים בסיסיים)</span>
+      </li>
+      <li>
+        <a href="/finance/business-loans-israel/">הלוואות לעסקים בישראל - מדריך כללי</a>
+        <span> (אם מדובר בהלוואות לצרכי עסק/תזרים)</span>
+      </li>
     </ul>
   </section>
 
   <section>
     <h2>שאלות נפוצות (FAQ)</h2>
 
-    <h3>האם איחוד הלוואות תמיד חוסך כסף?</h3>
+    <h3>האם איחוד הלוואות תמיד מוזיל את העלות?</h3>
     <p>
-      לא בהכרח. לעיתים ההחזר החודשי יורד אך תקופת ההלוואה מתארכת,
-      כך שסך הריבית שמשולמת בפועל עשוי להיות גבוה יותר. חשוב להשוות את סך התשלומים הכולל.
+      לא בהכרח. לפעמים ההחזר החודשי יורד כי התקופה מתארכת, ואז סך הריבית הכוללת עולה.
+      לכן חשוב להשוות <strong>עלות כוללת</strong> ולא רק החזר חודשי.
     </p>
 
-    <h3>למי איחוד הלוואות עשוי להתאים?</h3>
+    <h3>האם אפשר לאחד הלוואות מגופים שונים?</h3>
     <p>
-      לאנשים שיש להם מספר הלוואות קיימות ורוצים לבחון אפשרות לפישוט ההחזר או שינוי התנאים.
-      התאמה תלויה בנתונים אישיים, בהיסטוריית האשראי ובמדיניות הגופים המציעים את ההלוואה.
+      לעיתים כן, תלוי בגוף שנותן את ההלוואה המאוחדת וביכולת לסגור את ההלוואות הקיימות.
+      מומלץ לבדוק מראש עמלות/תנאי פירעון מוקדם והאם יש מגבלות ספציפיות.
     </p>
+
+    <h3>מה המסמכים שבדרך כלל מבקשים?</h3>
+    <p>
+      זה משתנה בין גופים, אבל לרוב יתבקשו פרטים על ההלוואות הקיימות (יתרות, מסלולים),
+      מסמכי הכנסה, תנועות חשבון/אישור ניהול חשבון ועוד.
+    </p>
+
+    <h3>מה “דגלים אדומים” שכדאי לשים לב אליהם?</h3>
+    <ul>
+      <li>הבטחה ל“אישור מובטח” בלי בדיקת נתונים.</li>
+      <li>חוסר שקיפות לגבי עמלות וסך תשלומים.</li>
+      <li>התמקדות רק בהחזר חודשי בלי פירוט העלות הכוללת.</li>
+    </ul>
   </section>
+
 </main>
 
 <footer>
   <div class="container">
-    <p>© <span id="year"></span> SmartInfo Israel – מידע כללי בלבד.</p>
+    <p>© <span id="year"></span> SmartInfo Israel - מידע כללי בלבד.</p>
   </div>
 </footer>
 
