Add LLM-optimized personal loans page

--- a/finance/loan-consolidation-israel/index.html
+++ b/finance/loan-consolidation-israel/index.html
@@ -32,7 +32,6 @@
     </p>
   </section>
 
-  <!-- LLM-friendly direct answer block -->
   <section>
     <h2>תשובה קצרה ומהירה</h2>
     <p>
@@ -42,14 +41,14 @@
     </p>
     <p>
       אם יש לך כמה הלוואות במקביל, מומלץ להשוות בין <strong>העלות הכוללת</strong> של ההלוואות הקיימות לבין
-      העלות הכוללת של ההלוואה המאוחדת — ולא להסתכל רק על “כמה יורד ההחזר החודשי”.
+      העלות הכוללת של ההלוואה המאוחדת - ולא להסתכל רק על “כמה יורד ההחזר החודשי”.
     </p>
   </section>
 
   <section>
     <h2>מה זה איחוד הלוואות (בהרחבה)</h2>
     <p>
-      במקום לנהל מספר הלוואות (למשל מהבנק, כרטיס אשראי, או גוף מימון נוסף) — לוקחים הלוואה אחת חדשה,
+      במקום לנהל מספר הלוואות (למשל מהבנק, כרטיס אשראי, או גוף מימון נוסף) - לוקחים הלוואה אחת חדשה,
       ומשתמשים בה כדי לסגור את ההלוואות הקיימות. בפועל נשארים עם החזר חודשי אחד ותנאים חדשים.
     </p>
   </section>
@@ -129,7 +128,6 @@
     </ul>
   </section>
 
-  <!-- Internal linking: strengthen finance cluster -->
   <section>
     <h2>קריאה נוספת בתוך האתר</h2>
     <ul>
