--- a/finance/personal-loans-israel/index.html
+++ b/finance/personal-loans-israel/index.html
@@ -2,50 +2,173 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>הלוואות פרטיות בישראל – מידע כללי | SmartInfo Israel</title>
-  <meta name="description" content="סקירה כללית על הלוואות פרטיות בישראל: בנקים, חברות כרטיסי אשראי, גופים חוץ בנקאיים ושיקולים חשובים.">
+  <title>הלוואות פרטיות בישראל - מדריך כללי, סוגים ומה חשוב לבדוק | SmartInfo Israel</title>
+  <meta name="description" content="מדריך כללי על הלוואות פרטיות בישראל: סוגי הלוואות, למי זה מתאים, יתרונות וחסרונות, טבלת השוואה ושאלות נפוצות. מידע כללי בלבד.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+
 <header>
   <div class="container">
-    <h1>הלוואות פרטיות בישראל – מדריך כללי</h1>
+    <h1>הלוואות פרטיות בישראל - מדריך כללי</h1>
     <nav>
       <a href="/">דף הבית</a>
-      <a href="/finance/business-loans-israel/">הלוואות לעסקים</a>
       <a href="/finance/personal-loans-israel/">הלוואות פרטיות</a>
       <a href="/finance/loan-consolidation-israel/">איחוד הלוואות</a>
+      <a href="/finance/business-loans-israel/">הלוואות לעסקים</a>
+      <a href="/about.html">אודות</a>
+      <a href="/legal-disclaimer.html">הצהרה משפטית</a>
     </nav>
   </div>
 </header>
 
 <main class="container">
+
   <section>
     <p class="notice">
-      המידע בעמוד זה הוא כללי בלבד, אינו ייעוץ פיננסי ואינו שיווק אשראי.
-      תנאי הלוואה נקבעים על ידי גופים מפוקחים ובהתאם לנתונים האישיים של כל לווה.
+      המידע בעמוד זה הוא מידע כללי בלבד ואינו מהווה ייעוץ פיננסי, משפטי או הצעה למתן אשראי.
+      תנאי הלוואה נקבעים על-ידי גופים מורשים ובהתאם לנתונים האישיים של כל לווה.
+    </p>
+  </section>
+
+  <section>
+    <h2>תשובה קצרה ומהירה</h2>
+    <p>
+      <strong>הלוואה פרטית</strong> היא הלוואה הניתנת ליחיד לצרכים אישיים כגון סגירת מינוס,
+      הוצאות בלתי צפויות, רכישות, לימודים או פריסה מחדש של התחייבויות קיימות.
+      התנאים משתנים לפי הגוף המלווה, פרופיל האשראי ויכולת ההחזר.
     </p>
   </section>
 
   <section>
     <h2>מהי הלוואה פרטית?</h2>
     <p>
-      הלוואה פרטית היא הלוואה שנלקחת על ידי אדם פרטי לצרכים אישיים – כגון רכישת רכב, מימון אירוע,
-      לימודים, כיסוי חוב קיים ועוד. ניתן לקבל הלוואות פרטיות מגופים שונים.
+      הלוואה פרטית היא אשראי הניתן לאדם פרטי (לא לעסק), בדרך כלל ללא צורך בפתיחת תיק עסקי.
+      ההלוואה יכולה להינתן על-ידי בנקים, גופים חוץ-בנקאיים, חברות אשראי או גופים מפוקחים אחרים.
     </p>
   </section>
+
+  <section>
+    <h2>למי הלוואה פרטית עשויה להתאים?</h2>
+    <ul>
+      <li>אנשים הזקוקים למימון לטווח קצר או בינוני.</li>
+      <li>מי שמעוניין לפרוס הוצאה גדולה לתשלומים.</li>
+      <li>מי שרוצה להסדיר התחייבויות קיימות בצורה נוחה יותר.</li>
+      <li>שכירים, עצמאיים או פנסיונרים - בכפוף לתנאי הגוף המלווה.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>סוגים נפוצים של הלוואות פרטיות</h2>
+    <ul>
+      <li><strong>הלוואה בנקאית:</strong> ניתנת דרך הבנק, לרוב בריבית משתנה לפי פרופיל הלקוח.</li>
+      <li><strong>הלוואה חוץ-בנקאית:</strong> דרך חברות אשראי או גופים פיננסיים נוספים.</li>
+      <li><strong>הלוואה לכל מטרה:</strong> ללא ייעוד ספציפי.</li>
+      <li><strong>הלוואה כנגד חיסכון/קרן:</strong> לעיתים בריבית נמוכה יותר אך עם סיכון לחיסכון.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>יתרונות וחסרונות כלליים</h2>
+
+    <h3>יתרונות אפשריים</h3>
+    <ul>
+      <li>גישה מהירה יחסית למימון.</li>
+      <li>אפשרות להתאים תקופת החזר.</li>
+      <li>פשטות בתהליך לעומת אשראי עסקי.</li>
+    </ul>
+
+    <h3>חסרונות וסיכונים</h3>
+    <ul>
+      <li>ריבית עשויה להיות גבוהה, במיוחד ללא בטוחה.</li>
+      <li>התחייבות חודשית קבועה פוגעת בתזרים.</li>
+      <li>אי-עמידה בהחזרים עלולה לפגוע בדירוג האשראי.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>טבלת בדיקה לפני לקיחת הלוואה פרטית</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>מה לבדוק</th>
+          <th>למה זה חשוב</th>
+          <th>טיפ מעשי</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>גובה הריבית</td>
+          <td>משפיע ישירות על עלות ההלוואה</td>
+          <td>להשוות בין כמה גופים</td>
+        </tr>
+        <tr>
+          <td>סך תשלומים</td>
+          <td>החזר חודשי נמוך לא תמיד זול</td>
+          <td>לחשב עלות כוללת</td>
+        </tr>
+        <tr>
+          <td>עמלות</td>
+          <td>יכולות להעלות עלות משמעותית</td>
+          <td>לבקש פירוט מראש</td>
+        </tr>
+        <tr>
+          <td>גמישות פירעון</td>
+          <td>מאפשרת שינוי במצב כלכלי</td>
+          <td>לבדוק אפשרות פירעון מוקדם</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section>
+    <h2>נושאים קשורים באתר</h2>
+    <ul>
+      <li>
+        <a href="/finance/loan-consolidation-israel/">איחוד הלוואות בישראל</a>
+        - פתרון אפשרי לניהול מספר הלוואות.
+      </li>
+      <li>
+        <a href="/finance/business-loans-israel/">הלוואות לעסקים בישראל</a>
+        - למי שמחפש מימון לפעילות עסקית.
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>שאלות נפוצות (FAQ)</h2>
+
+    <h3>האם הלוואה פרטית מתאימה לכל אחד?</h3>
+    <p>
+      לא בהכרח. התאמת ההלוואה תלויה ביכולת ההחזר, דירוג האשראי והצרכים האישיים.
+    </p>
+
+    <h3>מה ההבדל בין הלוואה בנקאית לחוץ-בנקאית?</h3>
+    <p>
+      הלוואה בנקאית ניתנת דרך הבנק, בעוד חוץ-בנקאית ניתנת על-ידי גופים אחרים.
+      התנאים, הריבית והגמישות עשויים להשתנות.
+    </p>
+
+    <h3>האם אפשר לפרוע הלוואה מוקדם?</h3>
+    <p>
+      לעיתים כן, אך ייתכנו עמלות. חשוב לבדוק זאת לפני חתימה.
+    </p>
+
+  </section>
+
 </main>
 
 <footer>
   <div class="container">
-    <p>© <span id="year"></span> SmartInfo Israel</p>
+    <p>© <span id="year"></span> SmartInfo Israel - מידע כללי בלבד.</p>
   </div>
 </footer>
 
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
+
 </body>
 </html>
