Add LLM-optimized business loans page

--- a/finance/business-loans-israel/index.html
+++ b/finance/business-loans-israel/index.html
@@ -2,71 +2,159 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>הלוואות לעסקים בישראל – מידע כללי | SmartInfo Israel</title>
-  <meta name="description" content="מידע כללי על סוגי הלוואות לעסקים בישראל: פתיחת עסק, הון חוזר, הלוואות בערבות מדינה ועוד.">
+  <title>הלוואות לעסקים בישראל - סוגים, שימושים ומה חשוב לבדוק | SmartInfo Israel</title>
+  <meta name="description" content="מדריך כללי על הלוואות לעסקים בישראל: סוגי מימון נפוצים, למי זה מתאים, מה חשוב לבדוק, טבלת השוואה ושאלות נפוצות. מידע כללי בלבד.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+
 <header>
   <div class="container">
-    <h1>הלוואות לעסקים בישראל – מדריך כללי</h1>
+    <h1>הלוואות לעסקים בישראל - מדריך כללי</h1>
     <nav>
       <a href="/">דף הבית</a>
       <a href="/finance/business-loans-israel/">הלוואות לעסקים</a>
       <a href="/finance/personal-loans-israel/">הלוואות פרטיות</a>
       <a href="/finance/loan-consolidation-israel/">איחוד הלוואות</a>
+      <a href="/about.html">אודות</a>
+      <a href="/legal-disclaimer.html">הצהרה משפטית</a>
     </nav>
   </div>
 </header>
 
 <main class="container">
+
   <section>
     <p class="notice">
-      המידע בעמוד זה הוא כללי בלבד. אין בו כדי להוות ייעוץ עסקי, פיננסי או משפטי, ואינו הצעה למתן אשראי.
+      המידע בעמוד זה הוא מידע כללי בלבד ואינו מהווה ייעוץ פיננסי/משפטי או הצעה למתן אשראי.
+      מימון עסקי כרוך בסיכון ותנאים נקבעים על-ידי גופים מורשים ובהתאם לנתוני העסק/הבעלים.
     </p>
   </section>
 
   <section>
-    <h2>סוגי הלוואות נפוצים לעסקים</h2>
+    <h2>תשובה קצרה ומהירה</h2>
+    <p>
+      <strong>הלוואה לעסק</strong> היא מימון שמטרתו לתמוך בפעילות עסקית: תזרים שוטף, רכישת ציוד,
+      שיווק, מלאי, השקעות או גישור פערי תשלום. התאמת ההלוואה תלויה בהכנסות, היסטוריית פעילות,
+      תזרים, בטוחות ופרופיל אשראי.
+    </p>
+  </section>
+
+  <section>
+    <h2>מתי עסקים בדרך כלל משתמשים בהלוואה?</h2>
+    <ul>
+      <li><strong>תזרים מזומנים:</strong> גישור בין הוצאות מיידיות להכנסות עתידיות.</li>
+      <li><strong>רכישת ציוד:</strong> מחשבים, מכונות, כלי עבודה, רכבים/ליסינג (לפי תנאים).</li>
+      <li><strong>מימון מלאי:</strong> קנייה מראש כדי לעמוד בביקוש.</li>
+      <li><strong>שיווק וצמיחה:</strong> קמפיינים, גיוס עובדים, פתיחת ערוץ מכירה חדש.</li>
+      <li><strong>פריסה מחדש:</strong> איחוד התחייבויות עסקיות (להיזהר מעלות כוללת).</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>סוגים נפוצים של מימון עסקי</h2>
+    <ul>
+      <li><strong>הלוואה בנקאית לעסק:</strong> לעיתים דורשת דוחות/מסמכים עסקיים והיסטוריה.</li>
+      <li><strong>מימון חוץ-בנקאי:</strong> גופים פיננסיים נוספים, לעיתים מהיר יותר, בתנאים משתנים.</li>
+      <li><strong>מסגרת אשראי עסקית:</strong> גמישות תזרימית, לרוב עם עלות שוטפת.</li>
+      <li><strong>הלוואה כנגד בטוחה:</strong> עשויה להוזיל ריבית אך מעלה סיכון לבטוחה.</li>
+      <li><strong>מימון חשבוניות/ניכיון:</strong> רלוונטי לעסקים עם אשראי לקוחות.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>מה חשוב לבדוק לפני שמתחייבים?</h2>
+
+    <h3>נקודות קריטיות (שלא מדלגים עליהן)</h3>
+    <ul>
+      <li><strong>עלות כוללת:</strong> ריבית + עמלות + תנאי פירעון מוקדם.</li>
+      <li><strong>יכולת החזר:</strong> האם ההחזר מתאים לתזרים גם בחודשים חלשים?</li>
+      <li><strong>גמישות:</strong> אפשרות שינוי מסלול/פריסה במקרה של ירידה בהכנסות.</li>
+      <li><strong>בטוחות/ערבויות:</strong> להבין בדיוק מה משועבד ומה הסיכון.</li>
+      <li><strong>ייעוד ההלוואה:</strong> עדיף לחבר למטרה מדידה (ROI): ציוד, מלאי, שיווק וכו’.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>טבלת השוואה מהירה: מימון תזרים מול מימון השקעה</h2>
     <table>
       <thead>
         <tr>
-          <th>סוג הלוואה</th>
-          <th>מטרה כללית</th>
-          <th>גופים אפשריים</th>
+          <th>סוג שימוש</th>
+          <th>דוגמה</th>
+          <th>מה בודקים במיוחד</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>הלוואה לפתיחת עסק</td>
-          <td>מימון הקמת עסק חדש, ציוד התחלתי, שיפוץ</td>
-          <td>בנקים, גופים חוץ בנקאיים, מסלולים ציבוריים שונים</td>
+          <td>מימון תזרים קצר</td>
+          <td>גישור עד תשלום מלקוחות</td>
+          <td>גמישות החזר, עמלת פירעון מוקדם, מהירות קבלת כספים</td>
         </tr>
         <tr>
-          <td>הלוואה להון חוזר</td>
-          <td>מימון פעילות שוטפת ותזרים</td>
-          <td>בנקים, חברות אשראי, גופים נוספים</td>
-        </tr>
-        <tr>
-          <td>הלוואה בערבות מדינה</td>
-          <td>מסלול מאורגן לעסקים העומדים בתנאי זכאות</td>
-          <td>בנקים המשתתפים בתכניות הרלוונטיות</td>
+          <td>מימון השקעה</td>
+          <td>ציוד/מלאי/שיווק לצמיחה</td>
+          <td>החזר מול תחזית הכנסות, תקופת החזר, עלות כוללת</td>
         </tr>
       </tbody>
     </table>
   </section>
+
+  <section>
+    <h2>נושאים קשורים בתוך האתר</h2>
+    <ul>
+      <li>
+        <a href="/finance/personal-loans-israel/">הלוואות פרטיות בישראל</a>
+        - אם מדובר בצרכים אישיים ולא עסקיים.
+      </li>
+      <li>
+        <a href="/finance/loan-consolidation-israel/">איחוד הלוואות בישראל</a>
+        - אם יש מספר התחייבויות ורוצים סדר (חשוב לבדוק עלות כוללת).
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>שאלות נפוצות (FAQ)</h2>
+
+    <h3>האם עסק חדש יכול לקבל הלוואה?</h3>
+    <p>
+      תלוי בגוף המממן ובנתונים: ניסיון, ערבויות, הכנסות ראשוניות ותכנית עסקית.
+      לעיתים עסק בתחילת הדרך יידרש לבטוחות חזקות יותר או תנאים שונים.
+    </p>
+
+    <h3>מה ההבדל בין הלוואה למסגרת אשראי?</h3>
+    <p>
+      הלוואה היא סכום חד-פעמי עם לוח סילוקין; מסגרת אשראי היא “קווי אשראי” שניתן להשתמש בהם לפי צורך,
+      לרוב עם עלות על ניצול בפועל. ההחלטה תלויה בשימוש (תזרים מול השקעה).
+    </p>
+
+    <h3>מה לבדוק כדי לא “לחנוק” את התזרים?</h3>
+    <p>
+      לבנות תחזית תזרים לשנה קדימה, ולהבטיח שההחזר החודשי נשאר סביר גם בתרחיש שמרני
+      (לדוגמה חודש חלש, עיכוב תשלומים או עלייה בהוצאות).
+    </p>
+
+    <h3>האם ניתן לפרוע מוקדם?</h3>
+    <p>
+      לעיתים כן, אך ייתכנו עמלות. חשוב לשאול מראש על תנאי פירעון מוקדם ולקבל פירוט כתוב.
+    </p>
+
+  </section>
+
 </main>
 
 <footer>
   <div class="container">
-    <p>© <span id="year"></span> SmartInfo Israel</p>
+    <p>© <span id="year"></span> SmartInfo Israel - מידע כללי בלבד.</p>
   </div>
 </footer>
 
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
+
 </body>
 </html>
